# 3cx-xapi-python-sdk

./: .gitignore  AGENT.md  CLAUDE.md  README.md  pyproject.toml  swagger.yaml
.github/workflows/: publish.yml  release.yaml
scripts/: generate_models.py
tests/: conftest.py  test_active_calls.py  test_auth.py  test_call_history.py  test_client.py  test_error_handling.py  test_exceptions.py  test_models.py  test_odata.py  test_queues.py  test_reports.py  test_system.py  test_trunks.py  test_users.py
threecx/: __init__.py  auth.py  client.py  exceptions.py  odata.py
threecx/models/: __init__.py  _generated.py  backups.py  base.py  call_flow.py  calls.py  contacts.py  fax.py  groups.py  holidays.py  parkings.py  phones.py  prompts.py  queues.py  receptionists.py  recordings.py  rules.py  system.py  trunks.py  users.py  website_links.py
threecx/services/: __init__.py  active_calls.py  backups.py  base.py  call_flow.py  call_history.py  chat.py  contacts.py  crm.py  defs.py  email.py  emergency.py  event_logs.py  fax.py  groups.py  holidays.py  inbound_rules.py  integrations.py  my_group.py  my_user.py  outbound_rules.py  parameters.py  parkings.py  pbx_services.py  phones.py  prompts.py  queues.py  receptionists.py  recordings.py  reports.py  ring_groups.py  security.py  settings.py  system.py  trunks.py  updates.py  users.py  voicemail.py  website_links.py
