[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "3cx-xapi-python-sdk"
version = "1.0.2"
description = "Python SDK for the 3CX XAPI (OData v4)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["3cx", "pbx", "voip", "sdk", "xapi"]
authors = [{name="78wesley"}]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-httpx>=0.30",
    "ruff",
    "mypy",
]

[tool.hatch.build.targets.wheel]
packages = ["threecx"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "threecx.models._generated"
ignore_errors = true
